fix gap between intro for iphone

--- a/app/scss/_intro.scss
+++ b/app/scss/_intro.scss
@@ -22,4 +22,12 @@
   @media (max-width: 291px) {
     height: 30vh;
   }
+//  iphone 6/7/8
+  @media (width: 375px) {
+    height: 35vh;
+  }
+//  iphone 6/7/8 plus
+  @media (width: 414px) {
+    height: 37vh;
+  }
 }
